第三次提交，添加了一些图片，使画面生动了起来。

--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>大发vgbhygwdergf</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1">
+    <title>BucketLayout</title>
+    <link rel="stylesheet" type="text/css" href="static/css/stylesheet.css">
 </head>
 <body>
-
-
+<div id="main">
+    <div id="showBox">
+        <div class="pic">
+            <img src="" title="" alt="">
+        </div>
+        <div class="intro">
+            <p>
+            </p>
+        </div>
+    </div>
+</div>
+<script src="static/js/pic.js"></script>
+<script src="static/js/main.js"></script>
 </body>
 </html>
