第四次提交，添加了一些属性，使页面看起来更整洁了。

--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1">
     <title>BucketLayout</title>
     <link rel="stylesheet" type="text/css" href="static/css/stylesheet.css">
 </head>
 <body>
 <div id="main">
     <div id="showBox">
-        <div class="pic">
+        <div id="pic">
             <img src="" title="" alt="">
         </div>
-        <div class="intro">
-            <p>
-            </p>
+        <div id="words">
+            <span></span>
         </div>
     </div>
 </div>
