优化css代码，使得代码更简洁，更精简，没有过多冗余。

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="main">
     <div id="showBox">
         <div id="pic">
-            <img src="" title="" alt="">
+            <img src="" title="" alt="" height="200" width="300">
         </div>
         <div id="words">
             <span></span>
