--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BucketLayout</title>
+    <title>木桶式布局</title>
     <link rel="stylesheet" type="text/css" href="static/css/stylesheet.css">
 </head>
 <body>
